--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "preline": "^3.2.3",
+        "sweetalert2": "^11.22.4",
         "tailwindcss": "^4.0.7",
         "vite": "^6.0"
     },
